    like git-annex add with -J. Bug was introduced as part of a different FD
    leak fix in version 6.20160318.
  * Support building with dlist-1.0
  * Fix a hang when using git-annex with an old openssh 7.2p2, which had
    some weird inheriting of ssh FDs by sshd. Bug was introduced in
    git-annex version 7.20200202.7.
  * Fix a bug in find --branch in the previous version.

 -- Joey Hess <id@joeyh.name>  Tue, 21 Jul 2020 12:58:30 -0400

git-annex (8.20200720.1) upstream; urgency=medium

  * Fix a bug in find --batch in the previous version.

 -- Joey Hess <id@joeyh.name>  Mon, 20 Jul 2020 19:39:11 -0400

git-annex (8.20200720) upstream; urgency=medium

  * import: Added --no-content option, which avoids downloading files
    from a special remote. Currently only supported by the directory
    special remote.
  * Honor annex.largefiles when importing a tree from a special remote.
    (Except for when --no-content is used.)
  * Fix a deadlock that could occur after git-annex got an unlocked
    file, causing the command to hang indefinitely. Known to happen on 
    vfat filesystems, possibly others.
  * Build with the http-client-restricted and git-lfs libraries when 
    available, otherwise use the vendored copy as before.
  * testremote: Fix over-allocation of resources and bad caching,
    including starting up a large number of external special remote processes.
    (Regression introduced in version 8.20200501)
  * test: Fix some test cases that assumed git's default branch name.
  * importfeed: Added some additional --template variables:
    itempubyear, itempubmonth, itempubday, itempubhour,
    itempubminute, itempubsecond.
  * Made several special remotes support locking content on them,
    which allows dropping from other special remotes in some situations
    where it was not possible before. Supported special remotes:
    S3 (with versioning=yes), git-lfs, tahoe
  * Fix reversion that broke passing annex.* and remote.*.annex-*